chore : 통합 docker-compose 설정 및 Makefile 추가